# watchdog-files

./: .env  .gitignore  main.py  pyproject.toml  watchdog.ipynb
watchdog_files/: __main__.py  main.py
