[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchdog_files"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "watchdog>=6.0.0",
]

[project.scripts]
watchdog-files = "watchdog_files.main:main"
